# blazing-fast-rss-watcher

./: .gitignore  Cargo.toml  README.md  rss_cache.db  rss_feeds.txt
.github/workflows/: rust.yml
src/: config.rs  db.rs  http.rs  lib.rs  main.rs  model.rs  push.rs  reader.rs  rss_fetch.rs  server.rs  telegram.rs  websub.rs
