[package]
name = "blazing-fast-rss-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
rss = "2.0.4"
rusqlite = "0.25"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
warp = "0.3"
anyhow = "1.0.44"
dotenv = "0.15.0"
structopt = "0.3"
regex = "1.8.4"