[package]
name = "blazing-fast-rss-watcher"
version = "0.1.0"
authors = ["Brian Fakhoury <brianfakhoury@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
rss = "2.0.4"
rusqlite = "0.29.0"
tokio = { version = "1.28.2", features = ["full"] }
serde = "1.0.164"
serde_derive = "1.0.164"
warp = "0.3.5"
dotenv = "0.15.0"
structopt = "0.3.26"
regex = "1.8.4"