[package]
name = "blazing-fast-rss-watcher"
version = "0.1.2"
authors = ["Brian Fakhoury <brianfakhoury@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A simple, asynchronous RSS reader implemented in Rust. It fetches, parses, and stores articles from provided RSS feeds and can operate in various modes including testing, HTTP, and Telegram notifications."
repository = "https://github.com/brianfakhoury/blazing-fast-rss-watcher"
keywords = ["rss", "polling"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
rss = "2.0.4"
rusqlite = "0.29.0"
tokio = { version = "1.28.2", features = ["full"] }
serde = "1.0.164"
serde_derive = "1.0.164"
warp = "0.3.5"
dotenv = "0.15.0"
structopt = "0.3.26"
regex = "1.8.4"
futures = "0.3.28"
